--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,1 +1,19 @@
- 
+main {
+  min-height: 80vh;
+}
+
+h3 {
+  padding: 1rem 0;
+}
+
+.rating {
+  width: 120px;
+}
+
+.rating span {
+  margin: 0.1rem;
+}
+
+.rating i {
+  font-size: 120%;
+}
